--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ social:
 
 # 百度统计
 # 使用博客模板请去掉或者更换 id
-#baidu:
-#    id: 8ba1c6be0953b6f9c2ba38e57f615421
+baidu:
+    id: 3e05235243a629c60b7f54f21b1aa378
 
 
 
